# Encyclopedia-VAE

./: .gitignore  .pre-commit-config.yaml  Changelog.md  README.md  pyproject.toml  ruff.toml
.github/workflows/: lint.yml  publish.yml  test.yml
configs/: bbvae.yaml  config_cli.yml  cvae.yaml  data_litceleb.yml  model_vae.yml  vae.yaml
encyclopedia_vae/: __init__.py  cli.py  dataset.py  experiment.py  run.py  types.py  types_helpers.py
encyclopedia_vae/data/: lit_celeba.py  lit_oxfordiitpet.py
encyclopedia_vae/lit_models/: lit_vae.py
encyclopedia_vae/losses/: __init__.py  losses.py
encyclopedia_vae/models/: __init__.py  beta_vae.py  betatc_vae.py  cat_vae.py  cvae.py  dfcvae.py  dip_vae.py  fvae.py  gamma_vae.py  hvae.py  info_vae.py  iwae.py  joint_vae.py  logcosh_vae.py  lvae.py  miwae.py  mssim_vae.py  swae.py  twostage_vae.py  vampvae.py  vanilla_vae.py  vq_vae.py  wae_mmd.py
encyclopedia_vae/models_leg/: __init__.py  base.py  betatc_vae.py  cat_vae.py  cvae.py  cvae_leg.py  dfcvae.py  dip_vae.py  fvae.py  gamma_vae.py  hvae.py  info_vae.py  iwae.py  mssim_vae.py  swae.py  twostage_vae.py  vampvae.py  vanilla_vae.py  vq_vae.py
encyclopedia_vae/modules/: __init__.py  decoder.py  encoder.py  final_layer.py  residual.py  (+1 more)
tests/: bvae.py  test_betatcvae.py  test_betavae.py  test_cat_vae.py  test_cvae.py  test_dfc.py  test_dipvae.py  test_fvae.py  test_gvae.py  test_hvae.py  test_iwae.py  test_joint_Vae.py  test_logcosh.py  test_lvae.py  test_miwae.py  test_mssimvae.py  test_swae.py  test_vae.py  test_vq_vae.py  test_wae.py  text_cvae.py  text_vamp.py
