[tool.poetry]
name = "encyclopedia-vae"
version = "0.1.0"
description = ""
authors = ["BaptisteMorisse <bmorisse.math@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.13"
lightning = {version = "^2.2.3", extras=["pytorch-extras"]}
rich = "^13.7.1"
tensorboard = "^2.16.2"
torch = "^2.3.0"
torchsummary = "^1.5.1"
torchvision = "^0.18.0"
typer = "^0.12.3"
einops = "^0.7.0"
torchmetrics = "^1.3.2"
pydantic = "^2.7.1"
gdown = "^5.1.0"
jsonargparse = {extras = ["signatures"], version = "^4.28.0"}


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.1"
ipython = "^8.1"
pre-commit = "^3.7.0"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
