[project]
name = "encyclopedia-vae"
version = "0.1.2"
description = "Add your description here"
authors = [
    { name = "BaptisteMorisse", email = "bmorisse.pro@proton.me" }
]
dependencies = [
    "torch>=2.3.0",
    "lightning[pytorch-extra]>=2.2.4",
    "einops>=0.8.0",
    "torchsummary>=1.5.1",
]
readme = "README.md"
requires-python = ">= 3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-examples>=0.0.10",
    "ruff>=0.4.3",
    "pre-commit>=3.7.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["encyclopedia_vae"]
